--- a/bouncing balls/index.html
+++ b/bouncing balls/index.html
@@ -7,8 +7,32 @@
         <link rel="stylesheet" href="style.css" />
     </head>
     <body>
-        <canvas></canvas>
-        <script src="engine.js"></script>
-        <script src="app.js"></script>
+        <div class="wrapper">
+            <canvas id="simulation"></canvas>
+            <div class="statistics-wrapper">
+                <div class="numbers">
+                    <div class="row susceptible">
+                        <div class="heading">Susceptible</div>
+                        <div class="data">100</div>
+                    </div>
+                    <div class="row infected">
+                        <div class="heading">Infected</div>
+                        <div class="data">0</div>
+                    </div>
+                    <div class="row dead">
+                        <div class="heading">Dead</div>
+                        <div class="data">0</div>
+                    </div>
+                    <div class="row recovered">
+                        <div class="heading">Recovered</div>
+                        <div class="data">0</div>
+                    </div>
+                </div>
+                <canvas id="graph"></canvas>
+                <canvas id="bar"></canvas>
+            </div>
+        </div>
+        <script src="setup.js"></script>
+        <script type="module" src="app.js"></script>
     </body>
 </html>
