--- a/bouncing balls/index.html
+++ b/bouncing balls/index.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Bouncing Balls</title>
+        <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@1,500;1,600&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="style.css" />
     </head>
     <body>
@@ -32,7 +33,8 @@
                 <canvas id="bar"></canvas>
             </div>
         </div>
-        <script src="setup.js"></script>
-        <script type="module" src="app.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.min.js"></script>
+        <script src="js/setup.js"></script>
+        <script type="module" src="js/app.js"></script>
     </body>
 </html>
